# aibot-story-builder

./: README.md  pyproject.toml
src/app/: constants.py  main.py  model_loader.py
